--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <title>TestTitle</title>
  </head>
  <body>
-  <h1>Now UnderConstruction!!</h1>
+  <h1>Now Open</h1>
   <p>ここから本文を書きます</p>
  </body>
 </html>
