second update index.html

--- a/index.html
+++ b/index.html
@@ -5,5 +5,9 @@
  <body>
   <h1>Now Open</h1>
   <p>ここから本文を書きます</p>
+  <h2>Gitコマンドの使い方</h2>
+  <li>git add</li>
+  <li>git commit -m</li>
+  <li>git push</li>
  </body>
 </html>
